pkg/servicemesh/federation/example/config-poc/export/tcp/destinationrule.yaml
# this just configures mTLS for the mongodb service, as this is required when
# accessing the service across the gateways
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: mongodb-mtls
  namespace: mesh1-bookinfo
spec:
  host: mongodb.mesh1-bookinfo.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 27017
        tls:
          mode: ISTIO_MUTUAL
  exportTo:
    - '*'
